CHANGES IN VERSION 1.22.0
-------------------------

    o 'allow.fork=TRUE' is the default in `snpgdsOpen()` since v1.21.2

    o add `print.snpgdsPCAClass`, `print.snpgdsEigMixClass`,
      `print.snpgdsPCASNPLoadingClass`, `print, snpgdsEigMixSNPLoadingClass`,
      `print.snpgdsIBDClass`, `print.snpgdsDissClass`, `print.snpgdsIBSClass`

    o fix a Win32 compiler issue with gcc-4.9


CHANGES IN VERSION 1.20.1
-------------------------

    o Bug fix: eigenvalues and TraceXTX are correctly calculated in
      `snpgdsPCA(, algorithm="randomized")`


CHANGES IN VERSION 1.20.0
-------------------------

    o a leading tilde in the file path is allowed in `snpgdsGDS2BED()`

    o change the file name "vignettes/SNPRelateTutorial.Rmd" to
      "vignettes/SNPRelate.Rmd", so `vignette("SNPRelate")` can work directly


CHANGES IN VERSION 1.18.1
-------------------------

    o support long vector in `snpgdsIBDSelection()`


CHANGES IN VERSION 1.18.0
-------------------------

    o `snpgdsBED2GDS()` allows a single file name without the extended file
      names (.bed, .fam, .bim)


CHANGES IN VERSION 1.16.0
-------------------------

    o a new option 'useMatrix' for the packed symmetric matrix using the Matrix
      package in `snpgdsIBDMoM()`, `snpgdsIBDKING()`, `snpgdsIBS()`,
      `snpgdsIndivBeta()` and `snpgdsGRM()` to reduce memory usages

    o fix a bug of missing sample and SNP IDs in the output of `snpgdsIndInb()`

    o new option 'start.pos' in `snpgdsLDpruning()`

    o new methods in `snpgdsIndInb()`: gcta1, gcta2, gcta3; progress
      information is shown during running the function

    o `snpgdsCombineGeno()` supports dosages


CHANGES IN VERSION 1.14.0
-------------------------

    o the default compression is "LZMA_RA" in `snpgdsBED2GDS()`,
      `snpgdsVCF2GDS()` and `snpgdsVCF2GDS_R()` for annotations

    o support Intel C++ compiler with SSE2/AVX2

    o allow interrupting requests in the calculation
